--- a/admin/order-detail.html
+++ b/admin/order-detail.html
@@ -501,7 +501,7 @@
                 <td>1</td>
                 <td><img src="../img/bdcake-1.jpg" alt="Hình ảnh sản phẩm 1" class="product-image"
                     style="width: 80px; height: 80px; object-fit: cover; border-radius: 6px;"></td>
-                <td>Khi hơi thở hóa thinh không</td>
+                <td>Bánh sinh nhật chocolate</td>
                 <td class="text-center">1</td>
                 <td class="text-right">230,000 VNĐ</td>
                 <td class="text-right">460,000 VNĐ</td>
@@ -510,7 +510,7 @@
                 <td>2</td>
                 <td><img src="../img/bdcake-2.jpg" alt="Hình ảnh sản phẩm 2" class="product-image"
                     style="width: 80px; height: 80px; object-fit: cover; border-radius: 6px;"></td>
-                <td>Tên của đóa hồng</td>
+                <td>Bánh mouse oreo bạc hà</td>
                 <td class="text-center">1</td>
                 <td class="text-right">187,000 VNĐ</td>
                 <td class="text-right">750,000 VNĐ</td>
@@ -519,7 +519,7 @@
                 <td>3</td>
                 <td><img src="../img/bdcake-3.jpg" alt="Hình ảnh sản phẩm 3" class="product-image"
                     style="width: 80px; height: 80px; object-fit: cover; border-radius: 6px;"></td>
-                <td>Yêu những điều không hoàn hảo</td>
+                <td>Bánh flan Pháp</td>
                 <td class="text-center">2</td>
                 <td class="text-right">300,000 VNĐ</td>
                 <td class="text-right">900,000 VNĐ</td>
