--- a/admin/products.html
+++ b/admin/products.html
@@ -850,7 +850,7 @@
         <input type="file" id="editImage" accept="image/*" />
         <!-- Hiển thị ảnh hiện tại -->
         <div id="currentImageContainer" style="margin-top:5px;">
-          <img id="currentImage" src="" alt="Ảnh hiện tại" style="max-width:150px; max-height:150px;" />
+          <img id="currentImage" src="../img/bdcake-1.jpg" alt="Ảnh hiện tại" style="max-width:150px; max-height:150px;" />
         </div>
 
         <button type="submit">Lưu thay đổi</button>
