Update giao diện quản lý nguyên liệu

--- a/admin/chef.html
+++ b/admin/chef.html
@@ -528,7 +528,7 @@
         </li>
         <li>
           <a
-            href="tonkho.html"
+            href="nguyenlieu.html"
             style="
               display: flex;
               align-items: center;
