--- a/admin/index.html
+++ b/admin/index.html
@@ -195,7 +195,7 @@
 
         <li>
           <a
-            href="tonkho.html"
+            href="nguyenlieu.html"
             style="
               display: flex;
               align-items: center;
