--- a/admin/chef-detail-johnconstatine.html
+++ b/admin/chef-detail-johnconstatine.html
@@ -279,7 +279,7 @@
             "><i class="material-icons" style="margin-right: 10px"></i>Quản lý nhập hàng</a>
       </li>
       <li>
-        <a href="tonkho.html" style="
+        <a href="nguyenlieu.html" style="
               display: flex;
               align-items: center;
               padding: 0.75rem 1rem;
