--- a/admin/chef.html
+++ b/admin/chef.html
@@ -537,7 +537,7 @@
               text-decoration: none;
             "
             ><i class="material-icons" style="margin-right: 10px"></i
-            >Quản lý tồn kho</a
+            >Quản lý nguyên liệu</a
           >
         </li>
 
@@ -585,8 +585,8 @@
             </tr>
             <tr>
               <td>2</td>
-              <td>Trần Thị B<br /></td>
-              <td>Đầu bếp chính</td>
+              <td>Michael Smith<br /></td>
+              <td>Đầu bếp phụ</td>
               <td>
                 <span class="status-icon active"></span>
               </td>
@@ -603,8 +603,8 @@
             </tr>
             <tr>
               <td>3</td>
-              <td>Lê Văn C<br /></td>
-              <td>Đầu bếp phụ</td>
+              <td>Jane Doe<br /></td>
+              <td>Đầu bếp chính</td>
               <td><i class="material-icons-round lock-icon">lock</i></td>
               <td>
                 <div class="actions">
