--- a/admin/import-add.html
+++ b/admin/import-add.html
@@ -535,7 +535,7 @@
               padding: 0.75rem 1rem;
               color: white;
               text-decoration: none;
-            "><i class="material-icons" style="margin-right: 10px"></i>Quản lý tồn kho</a>
+            "><i class="material-icons" style="margin-right: 10px"></i>Quản lý nguyên liệu</a>
       </li>
 
       <!-- Đăng xuất -->
