--- a/admin/index.html
+++ b/admin/index.html
@@ -204,7 +204,7 @@
               text-decoration: none;
             "
             ><i class="material-icons" style="margin-right: 10px"></i
-            >Quản lý tồn kho</a
+            >Quản lý nguyên liệu</a
           >
         </li>
 
