--- a/pages/birthday-cake-2.html
+++ b/pages/birthday-cake-2.html
@@ -115,7 +115,7 @@
       <div class="position-relative">
         <!-- Nút Back -->
         <a
-          href="../index.html"
+          href="javascript:history.back()"
           class="btn btn-outline-primary position-absolute m-3"
           style="top: -90px; left: -318px; z-index: 1000"
         >
@@ -552,7 +552,7 @@
                     ><i class="bi bi-arrow-right text-primary me-2"></i>About
                     Us</a
                   >
-                  <a class="text-secondary mb-2" href="menu.html"
+                  <a class="text-secondary mb-2" href="birthday-cake-1.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Menu &
                     Pricing</a
                   >
