--- a/pages/birthday-cake-3.html
+++ b/pages/birthday-cake-3.html
@@ -96,7 +96,7 @@
   <div class="container my-5 position-relative">
     <div class="position-relative">
       <!-- Nút Back -->
-      <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
+      <a href="javascript:history.back()" class="btn btn-outline-primary position-absolute m-3"
         style="top: -90px; left: -318px; z-index: 1000">
         ← Back
       </a>
@@ -424,8 +424,8 @@
                 <a class="text-secondary mb-2" href="about.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>About
                   Us</a>
-                <a class="text-secondary mb-2" href="menu.html"><i class="bi bi-arrow-right text-primary me-2"></i>Menu
-                  &
+                <a class="text-secondary mb-2" href="birthday-cake-1.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Menu &
                   Pricing</a>
                 <a class="text-secondary mb-2" href="contact.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Contact
