--- a/pages/edit-info.html
+++ b/pages/edit-info.html
@@ -344,35 +344,24 @@
                 <form>
                     <div class="mb-3">
                         <label class="form-label">Họ và tên</label>
-                        <input type="text" class="form-control" value="Nguyễn Văn A" />
+                        <input type="text" class="form-control" value="Nguyễn Văn A" placeholder="Nhập họ tên của bạn..."/>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label">Email</label>
-                        <input type="email" class="form-control" value="nguyenvana@gmail.com" />
+                        <input type="email" class="form-control" value="nguyenvana@gmail.com" placeholder="Nhập email của bạn..." />
 
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label">Số điện thoại</label>
-                        <input type="text" class="form-control" value="033456789" />
+                        <input type="text" class="form-control" value="0192837465" placeholder="Nhập số điện thoại của bạn..."/>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label">Địa chỉ</label>
-                        <input type="text" class="form-control" placeholder="Số nhà & Tên đường"
-                            value="123 Đường Mai Chí Thọ" />
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label class="form-label">Quận/Huyện</label>
-                            <input type="text" class="form-control" value="Quận Thủ Đức" />
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label class="form-label">Thành phố</label>
-                            <input type="text" class="form-control" value="TP.HCM" />
-                        </div>
+                        <input type="text" class="form-control" placeholder="Nhập địa chỉ của bạn..."
+                            value="273 An Dương Vương, Quận 5" />
                     </div>
 
                     <hr />
