--- a/pages/snack-cake-1.html
+++ b/pages/snack-cake-1.html
@@ -103,7 +103,7 @@
   <div class="container my-5 position-relative">
     <div class="position-relative">
       <!-- Nút Back -->
-      <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
+      <a href="javascript:history.back()" class="btn btn-outline-primary position-absolute m-3"
         style="top: -90px; left: -318px; z-index: 1000">
         ← Back
       </a>
