--- a/pages/birthday-cake-detail-1-logged.html
+++ b/pages/birthday-cake-detail-1-logged.html
@@ -150,7 +150,7 @@
   <div class="container mt-5">
     <div class="position-relative">
       <!-- Nút Back -->
-      <a href="birthday-cake-1-logged.html" class="btn btn-outline-primary position-absolute m-3"
+      <a href="javascript:history.back()" class="btn btn-outline-primary position-absolute m-3"
         style="top: -40px; left: -360px; z-index: 1000">
         ← Back
       </a>
