--- a/pages/birthday-cake-detail-1.html
+++ b/pages/birthday-cake-detail-1.html
@@ -197,7 +197,7 @@
   <div class="container mt-5">
     <div class="position-relative">
       <!-- Nút Back -->
-      <a href="birthday-cake-1.html" class="btn btn-outline-primary position-absolute m-3"
+      <a href="javascript:history.back()" class="btn btn-outline-primary position-absolute m-3"
         style="top: -40px; left: -360px; z-index: 1000">
         ← Back
       </a>
@@ -351,11 +351,11 @@
                 Quick Links
               </h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="index.html"><i
+                <a class="text-secondary mb-2" href="../index.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
                 <a class="text-secondary mb-2" href="about.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                <a class="text-secondary mb-2" href="menu.html"><i class="bi bi-arrow-right text-primary me-2"></i>Menu
+                <a class="text-secondary mb-2" href="birthday-cake-1.html"><i class="bi bi-arrow-right text-primary me-2"></i>Menu
                   & Pricing</a>
                 <a class="text-secondary mb-2" href="contact.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
