--- a/pages/cart.html
+++ b/pages/cart.html
@@ -120,7 +120,7 @@
   <div class="cart-container">
     <div class="position-relative">
       <!-- Nút Back -->
-      <a href="birthday-cake-1-logged.html" class="btn btn-outline-primary position-absolute m-3"
+      <a href="javascript:history.back()" class="btn btn-outline-primary position-absolute m-3"
         style="top: -40px; left: -360px; z-index: 1000">
         ← Back
       </a>
@@ -258,16 +258,15 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About
+                <a class="text-secondary mb-2" href="loggedin.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                <a class="text-secondary mb-2" href="about-logged.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>About
                   Us</a>
-                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our
-                  Services</a>
-                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Meet The
-                  Team</a>
-                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest
-                  Blog</a>
-                <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact
+                <a class="text-secondary mb-2" href="team-logged.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                <a class="text-secondary mb-2" href="contact-logged.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Contact
                   Us</a>
               </div>
             </div>
