--- a/pages/contact-logged.html
+++ b/pages/contact-logged.html
@@ -14,7 +14,9 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Oswald:wght@500;600;700&family=Pacifico&display=swap" rel="stylesheet"> 
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Oswald:wght@500;600;700&family=Pacifico&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -31,18 +33,18 @@
 
     <!-- CSS cho nút Close custom -->
     <style>
-      .btn-close-custom {
-        background-color: #e88f2a;
-        border: none;
-        padding: 8px 16px;
-        color: #fff;
-        border-radius: 4px;
-        cursor: pointer;
-      }
+        .btn-close-custom {
+            background-color: #e88f2a;
+            border: none;
+            padding: 8px 16px;
+            color: #fff;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-      .btn-close-custom:hover {
-        background-color: #cf7d20;
-      }
+        .btn-close-custom:hover {
+            background-color: #cf7d20;
+        }
     </style>
 </head>
 
@@ -96,7 +98,7 @@
                     <a href="about-logged.html" class="nav-item nav-link">About Us</a>
                     <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
                     <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
-                    
+
                     <a href="contact-logged.html" class="nav-item nav-link active">Contact Us</a>
                 </div>
 
@@ -172,19 +174,24 @@
                     <form id="contactForm">
                         <div class="row g-3">
                             <div class="col-sm-6">
-                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Your Name" style="height: 55px;">
+                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Your Name"
+                                    style="height: 55px;">
                             </div>
                             <div class="col-sm-6">
-                                <input type="email" class="form-control bg-light border-0 px-4" placeholder="Your Email" style="height: 55px;">
+                                <input type="email" class="form-control bg-light border-0 px-4" placeholder="Your Email"
+                                    style="height: 55px;">
                             </div>
                             <div class="col-sm-12">
-                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Subject" style="height: 55px;">
+                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Subject"
+                                    style="height: 55px;">
                             </div>
                             <div class="col-sm-12">
-                                <textarea class="form-control bg-light border-0 px-4 py-3" rows="4" placeholder="Message"></textarea>
+                                <textarea class="form-control bg-light border-0 px-4 py-3" rows="4"
+                                    placeholder="Message"></textarea>
                             </div>
                             <div class="col-sm-12">
-                                <button class="btn btn-primary border-inner w-100 py-3" type="submit">Send Message</button>
+                                <button class="btn btn-primary border-inner w-100 py-3" type="submit">Send
+                                    Message</button>
                             </div>
                         </div>
                     </form>
@@ -196,8 +203,7 @@
 
 
     <!-- Modal thông báo -->
-    <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content text-center p-4">
                 <h5 class="modal-title mb-3" id="successModalLabel">Message Sent</h5>
@@ -212,11 +218,16 @@
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-4 col-md-6 mt-lg-n5">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
+                    <div
+                        class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
                         <a href="../index.html" class="navbar-brand">
-                            <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
+                            <h1 class="m-0 text-uppercase text-white"><i
+                                    class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                         </a>
-                        <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd eos duo dolore no.</p>
+                        <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore
+                            stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum
+                            et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd
+                            eos duo dolore no.</p>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
@@ -236,20 +247,27 @@
                                 <p class="mb-0">+012 345 67890</p>
                             </div>
                             <div class="d-flex mt-4">
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
+                                        class="fab fa-twitter fw-normal"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
+                                        class="fab fa-facebook-f fw-normal"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
+                                        class="fab fa-linkedin-in fw-normal"></i></a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
-                                <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog</a>
-                                <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                                <a class="text-secondary mb-2" href="loggedin.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                <a class="text-secondary mb-2" href="about-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>About
+                                    Us</a>
+                                <a class="text-secondary mb-2" href="team-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                                <a class="text-secondary mb-2" href="contact-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
+                                    Us</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
@@ -269,8 +287,8 @@
     </div>
     <div class="container-fluid text-secondary py-4" style="background: #111111;">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Your Site Name</a>. All Rights Reserved. 
-            Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
+            <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Your Site Name</a>. All Rights Reserved.
+                Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
         </div>
     </div>
     <!-- Footer End -->
@@ -293,11 +311,12 @@
 
     <!-- JS để mở modal khi gửi form -->
     <script>
-      document.getElementById("contactForm").addEventListener("submit", function(e) {
-        e.preventDefault(); // chặn reload trang
-        var myModal = new bootstrap.Modal(document.getElementById('successModal'));
-        myModal.show();
-      });
+        document.getElementById("contactForm").addEventListener("submit", function (e) {
+            e.preventDefault(); // chặn reload trang
+            var myModal = new bootstrap.Modal(document.getElementById('successModal'));
+            myModal.show();
+        });
     </script>
 </body>
+
 </html>
