--- a/pages/loggedin.html
+++ b/pages/loggedin.html
@@ -82,7 +82,7 @@
                     <a href="about-logged.html" class="nav-item nav-link">About Us</a>
                     <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
                     <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
-                    
+
                     <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
                 </div>
 
@@ -114,7 +114,7 @@
     </nav>
     <!-- Navbar End -->
 
-<!-- Hero Start -->
+    <!-- Hero Start -->
     <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
         <!-- Slides -->
         <div class="carousel-inner">
@@ -687,18 +687,16 @@
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-secondary mb-2" href="#"><i
+                                <a class="text-secondary mb-2" href="loggedin.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                                <a class="text-secondary mb-2" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                                <a class="text-secondary mb-2" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
-                                <a class="text-secondary mb-2" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Latest Blog</a>
-                                <a class="text-secondary" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                                <a class="text-secondary mb-2" href="about-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>About
+                                    Us</a>
+                                <a class="text-secondary mb-2" href="team-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                                <a class="text-secondary mb-2" href="contact-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
+                                    Us</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
