--- a/pages/menu-logged.html
+++ b/pages/menu-logged.html
@@ -82,7 +82,7 @@
                     <a href="about-logged.html" class="nav-item nav-link">About Us</a>
                     <a href="menu-logged.html" class="nav-item nav-link active">Menu & Pricing</a>
                     <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
-                    
+
                     <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
                 </div>
 
@@ -521,16 +521,14 @@
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-secondary mb-2" href="loggedin.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                                <a class="text-secondary mb-2" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                                <a class="text-secondary mb-2" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
-                                <a class="text-secondary mb-2" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Latest Blog</a>
-                                <a class="text-secondary" href="#"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                                <a class="text-secondary mb-2" href="about-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>About
+                                    Us</a>
+                                <a class="text-secondary mb-2" href="team-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                                <a class="text-secondary mb-2" href="contact-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
+                                    Us</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
