--- a/pages/snack-cake-2.html
+++ b/pages/snack-cake-2.html
@@ -103,7 +103,7 @@
   <div class="container my-5 position-relative">
     <div class="position-relative">
       <!-- Nút Back -->
-      <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
+      <a href="javascript:history.back()" class="btn btn-outline-primary position-absolute m-3"
         style="top: -90px; left: -318px; z-index: 1000">
         ← Back
       </a>
@@ -363,7 +363,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- Pagination -->
   <div class="d-flex justify-content-center mt-4">
     <nav aria-label="Cake list pages">
@@ -433,15 +433,14 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="../index.html"><i
+                <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                <a class="text-secondary mb-2" href="about.html"><i
+                <a class="text-secondary mb-2" href="about-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>About
                   Us</a>
-                <a class="text-secondary mb-2" href="menu.html"><i class="bi bi-arrow-right text-primary me-2"></i>Menu
-                  &
-                  Pricing</a>
-                <a class="text-secondary mb-2" href="contact.html"><i
+                <a class="text-secondary mb-2" href="team-logged.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                <a class="text-secondary mb-2" href="contact-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Contact
                   Us</a>
               </div>
